--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ loguru = "^0.7.2"
 celery = "^5.4.0"
 rabbitmq = "^0.2.0"
 redis = "^5.0.4"
+torch = "^2.3.0"
 
 [build-system]
 requires = ["poetry-core"]
