--- a/.docker/Dockerfile.api
+++ b/.docker/Dockerfile.api
@@ -1,10 +1,10 @@
-FROM python:3.8-slim
+FROM python:3.11-slim
 
 WORKDIR /app
 
 COPY pyproject.toml poetry.lock /app/
 
-RUN pip install --no-cache-dir poetry=="1.5.0"
+RUN pip install --no-cache-dir poetry
 
 RUN poetry install --no-dev
 
